--- a/register.html
+++ b/register.html
@@ -6,16 +6,20 @@
 
     <div class="container">
         <p>Create your Account</p>
-        <form action="/action_page.php">
+        <form action="" method="post" onsubmit="return false">
             <label for="First Name">First Name</label>
             <input type="text" name="firstname" id="firstname" placeholder="Joko" required>
             <label for="lastname">Last Name</label>
             <input type="text" name="lastname" id="lastname" placeholder="Shidiq" required>
             <label for="email">Email Address</label>
-            <input type="email" id="fname" name="email" placeholder="email@example.com" required>
+            <input type="email" id="email" name="email" placeholder="email@example.org" required>
             <label for="password">Password</label>
-            <input type="password" id="lname" name="password" placeholder="********" required>
-            <input type="submit" value="Register">
+            <input type="password" id="password" name="password" placeholder="********" required>
+            <label for="">
+                <input type="checkbox" name="" id="" checked="checked">
+                To register with us please tick to agree to our <br> Terms and Conditions.
+            </label>
+            <input type="submit" value="Register" onclick="validation()">
         </form>
 
     </div>
@@ -30,15 +34,23 @@
     function validation() {
         let email = document.getElementById("email").value;
         let password = document.getElementById("password").value;
+        let firstname = document.getElementById("password").value;
+        let lastname = document.getElementById("password").value;
         // console.log(password.length)
         var length = password.length;
         if (length <= 8) {
-            console.log("password to short")
+            console.log("password to short");
         } else {
-            console.log(email + '-->' + password);
+            let formData = {
+                email: email,
+                password: password,
+                firstname: firstname,
+                lastname: lastname
+
+            }
+            console.log(formData);
         }
     }
-
 </script>
 
 
